--- a/index.html
+++ b/index.html
@@ -384,6 +384,27 @@
             <h1>GAME RESULTS | LIVE UPDATES</h1>
             <p>DAILY UPDATES | ENTERTAINMENT ONLY</p>
         </header>
+        <div class="container">
+    <!-- Header -->
+    <header class="header pulse">
+        <h1>GAME RESULTS | LIVE UPDATES</h1>
+        <p>DAILY UPDATES | ENTERTAINMENT ONLY</p>
+    </header>
+
+    <!-- ===== ADD THIS NEW LEAK BOX ===== -->
+    <div class="leak-box">
+        <h3>आज की लीक जोड़ी यहां मिलेगी</h3>
+        <p>FARIDABAD GAZIYABAD GALI DS</p>
+        <p>SPORTS KING DHELI HEAD BRANCH MANAGER (CEO)</p>
+        <p>ADD</p>
+        <p>GURU BHAI KING</p>
+        <button class="leak-btn" onclick="openWhatsApp()">WHATSAPP NOW</button>
+    </div>
+    <!-- ===== END LEAK BOX ===== -->
+
+    <!-- Rest of your existing content -->
+    <div class="banner">
+        ...
         
         <!-- Disclaimer Box -->
         <div class="disclaimer-box">
