--- a/index.html
+++ b/index.html
@@ -24,6 +24,24 @@
         }
         
         body {
+            .leak-box {
+  background: orange;
+  color: white;
+  padding: 15px;
+  margin: 10px;
+  border-radius: 5px;
+  text-align: center;
+  border: 2px dashed yellow;
+}
+.leak-box button {
+  background: green;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 20px;
+  font-weight: bold;
+  margin-top: 10px;
+}
             background-color: var(--dark);
             color: var(--light);
             cursor: pointer;
