--- a/index.html
+++ b/index.html
@@ -1,92 +1,129 @@
 <!DOCTYPE html><html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Get daily number insights, patterns and analysis for informational purposes.">
-  <title>Daily Number Insights</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Get daily number analysis, insights, and results. Updated regularly for informational purposes only.">
+  <title>Number Insight 786 | Daily Data Tracker</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: sans-serif;
       margin: 0;
       padding: 0;
-      background: #f9f9f9;
-      color: #333;
+      background: #f4f4f4;
+      color: #222;
     }
     header {
-      background-color: #1976d2;
-      color: white;
-      padding: 1.5rem;
+      background: #212121;
+      color: #fff;
+      padding: 1rem;
       text-align: center;
     }
     main {
-      padding: 2rem;
+      padding: 1rem;
       max-width: 900px;
       margin: auto;
-      background: white;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      line-height: 1.6;
+      background: #fff;
     }
-    h2 {
-      color: #1976d2;
+    h1 {
+      font-size: 24px;
+      margin-bottom: 0.5rem;
     }
-    .button {
+    .results {
+      background: #e3f2fd;
+      border: 1px solid #90caf9;
+      padding: 1rem;
+      border-radius: 5px;
+      margin-top: 1rem;
+    }
+    .results table {
+      width: 100%;
+      border-collapse: collapse;
+    }
+    .results th, .results td {
+      padding: 10px;
+      border: 1px solid #bbb;
+      text-align: center;
+    }
+    .btn {
       display: inline-block;
-      padding: 0.75rem 1.5rem;
-      margin: 1.5rem 0;
-      background-color: #1976d2;
-      color: white;
+      padding: 0.7rem 1.2rem;
+      background: #1976d2;
+      color: #fff;
       text-decoration: none;
       border-radius: 4px;
+      margin-top: 1rem;
     }
     footer {
       text-align: center;
       font-size: 0.85rem;
+      color: #666;
       padding: 1rem;
-      color: #777;
+      background: #eee;
+      margin-top: 2rem;
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>Number Strategy & Insights</h1>
-    <p>Daily updated number patterns, statistical analysis, and educational resources</p>
+    <h1>Number Insight 786</h1>
+    <p>Daily Analyzed Trends & Patterns – Updated for Educational Use</p>
   </header>  <main>
-    <h2>About Us</h2>
-    <p>
-      We provide daily numerical trend analysis and strategy insights based on past observations. Our goal is to help users understand data-driven patterns for informational purposes.
-    </p><h2>Our Services</h2>
-<ul>
-  <li>Daily number pattern updates</li>
-  <li>Trend and behavior breakdown</li>
-  <li>Weekly summary reports</li>
-  <li>Educational content for learning strategies</li>
-  <li>Personalized updates via private access</li>
-</ul>
+    <section class="results">
+      <h2>Today’s Number Chart</h2>
+      <table>
+        <thead>
+          <tr>
+            <th>Region</th>
+            <th>Code</th>
+            <th>Updated</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Zone A</td>
+            <td>78</td>
+            <td>15 June 2025</td>
+          </tr>
+          <tr>
+            <td>City Core</td>
+            <td>43</td>
+            <td>15 June 2025</td>
+          </tr>
+          <tr>
+            <td>Metro West</td>
+            <td>22</td>
+            <td>15 June 2025</td>
+          </tr>
+          <tr>
+            <td>Capital Circle</td>
+            <td>61</td>
+            <td>15 June 2025</td>
+          </tr>
+          <tr>
+            <td>Region X</td>
+            <td>94</td>
+            <td>15 June 2025</td>
+          </tr>
+        </tbody>
+      </table>
+    </section><section>
+  <h2>About Our Analysis</h2>
+  <p>
+    This platform provides daily number pattern observations and data summaries for those interested in learning numerical trends. All data is based on publicly available sources and intended for educational and informational use only.
+  </p>
+</section>
 
-<h2>How to Join</h2>
-<p>
-  Click the button below to fill out a quick form. Once submitted, our team will share access to the latest updates.
-</p>
-
-<a href="https://forms.gle/YOUR_GOOGLE_FORM_LINK" class="button" target="_blank">Access Updates</a>
-
-<h2>What You’ll Learn</h2>
-<p><strong>Pattern Trends:</strong> Track repeated number behaviors using historical data.</p>
-<p><strong>Timing Insights:</strong> Understand how timing influences number appearance.</p>
-<p><strong>Strategy Models:</strong> Get tips on how to interpret result-based trends and structures.</p>
-
-<h2>User Feedback</h2>
-<p><em>"Very professional format. The insights are data-focused and great for learning." – Ravi S.</em></p>
-<p><em>"Daily updates help me stay engaged and informed. Clear and easy to understand." – Meena K.</em></p>
-
-<h2>Why Choose This Platform?</h2>
-<p>
-  Our insights are designed for informational and educational use only. We follow ethical guidelines and do not promote or encourage any financial speculation. Our aim is to empower curious minds with knowledge.
-</p>
+<section>
+  <h2>Get Private Access to Full Reports</h2>
+  <p>
+    Want more in-depth trends and exclusive updates? Join our private info channel to get extended insights.
+  </p>
+  <a class="btn" href="https://forms.gle/YOUR_GOOGLE_FORM_LINK" target="_blank">Join Now</a>
+</section>
 
   </main>  <footer>
-    <p>Disclaimer: This site is intended for informational and educational purposes only. No part of this content constitutes financial advice or promotes any form of betting or gambling.</p>
-    <p>&copy; 2025 Insight Team</p>
+    <p>Disclaimer: This site does not promote or encourage any form of betting or gambling. All content is for educational and informational purposes only.</p>
+    <p>&copy; 2025 Insight786.in</p>
   </footer>
 </body>
 </html>
