--- a/index.html
+++ b/index.html
@@ -2,128 +2,110 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Get daily number analysis, insights, and results. Updated regularly for informational purposes only.">
-  <title>Number Insight 786 | Daily Data Tracker</title>
+  <meta name="description" content="Get daily updated number insights and educational patterns. Safe for Meta Ads.">
+  <title>Insight Chart 786 | Daily Number Results</title>
   <style>
     body {
-      font-family: sans-serif;
       margin: 0;
-      padding: 0;
-      background: #f4f4f4;
-      color: #222;
+      font-family: Arial, sans-serif;
+      background-color: #f8f9fa;
+      color: #212121;
     }
     header {
-      background: #212121;
-      color: #fff;
+      background-color: #1e88e5;
+      color: white;
       padding: 1rem;
       text-align: center;
     }
-    main {
-      padding: 1rem;
-      max-width: 900px;
-      margin: auto;
-      background: #fff;
-    }
-    h1 {
+    header h1 {
+      margin: 0;
       font-size: 24px;
-      margin-bottom: 0.5rem;
     }
-    .results {
-      background: #e3f2fd;
-      border: 1px solid #90caf9;
+    .main {
       padding: 1rem;
-      border-radius: 5px;
+      max-width: 1000px;
+      margin: auto;
+    }
+    .table-container {
+      overflow-x: auto;
       margin-top: 1rem;
     }
-    .results table {
+    table {
       width: 100%;
       border-collapse: collapse;
+      background-color: white;
     }
-    .results th, .results td {
-      padding: 10px;
-      border: 1px solid #bbb;
+    th, td {
+      padding: 12px;
+      border: 1px solid #ddd;
       text-align: center;
     }
-    .btn {
-      display: inline-block;
-      padding: 0.7rem 1.2rem;
-      background: #1976d2;
-      color: #fff;
+    th {
+      background-color: #eeeeee;
+    }
+    .cta {
+      margin: 2rem 0;
+      text-align: center;
+    }
+    .cta a {
+      background-color: #25D366;
+      color: white;
       text-decoration: none;
-      border-radius: 4px;
-      margin-top: 1rem;
+      padding: 0.75rem 1.5rem;
+      border-radius: 5px;
+      font-size: 18px;
     }
     footer {
+      background-color: #f1f1f1;
+      padding: 1rem;
       text-align: center;
       font-size: 0.85rem;
-      color: #666;
-      padding: 1rem;
-      background: #eee;
-      margin-top: 2rem;
+      color: #777;
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>Number Insight 786</h1>
-    <p>Daily Analyzed Trends & Patterns – Updated for Educational Use</p>
-  </header>  <main>
-    <section class="results">
-      <h2>Today’s Number Chart</h2>
+    <h1>Insight Chart 786</h1>
+    <p>Daily Updated Number Chart | Educational Insights</p>
+  </header>  <div class="main">
+    <h2>Today’s Data Table</h2>
+    <div class="table-container">
       <table>
         <thead>
           <tr>
             <th>Region</th>
-            <th>Code</th>
-            <th>Updated</th>
+            <th>Time</th>
+            <th>Result</th>
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <td>Zone A</td>
-            <td>78</td>
-            <td>15 June 2025</td>
-          </tr>
-          <tr>
-            <td>City Core</td>
-            <td>43</td>
-            <td>15 June 2025</td>
-          </tr>
-          <tr>
-            <td>Metro West</td>
-            <td>22</td>
-            <td>15 June 2025</td>
-          </tr>
-          <tr>
-            <td>Capital Circle</td>
-            <td>61</td>
-            <td>15 June 2025</td>
-          </tr>
-          <tr>
-            <td>Region X</td>
-            <td>94</td>
-            <td>15 June 2025</td>
-          </tr>
+          <tr><td>Zone A</td><td>01:00 PM</td><td>76</td></tr>
+          <tr><td>Metro B</td><td>02:00 PM</td><td>52</td></tr>
+          <tr><td>Central City</td><td>03:00 PM</td><td>93</td></tr>
+          <tr><td>Region X</td><td>04:00 PM</td><td>14</td></tr>
+          <tr><td>North Valley</td><td>05:00 PM</td><td>37</td></tr>
+          <tr><td>Coastal Edge</td><td>06:00 PM</td><td>48</td></tr>
+          <tr><td>Capital Ring</td><td>07:00 PM</td><td>62</td></tr>
+          <tr><td>Zone Y</td><td>08:00 PM</td><td>20</td></tr>
+          <tr><td>Metro South</td><td>09:00 PM</td><td>85</td></tr>
+          <tr><td>Zone Z</td><td>10:00 PM</td><td>11</td></tr>
         </tbody>
       </table>
-    </section><section>
-  <h2>About Our Analysis</h2>
-  <p>
-    This platform provides daily number pattern observations and data summaries for those interested in learning numerical trends. All data is based on publicly available sources and intended for educational and informational use only.
-  </p>
-</section>
+    </div><div class="cta">
+  <a href="https://api.whatsapp.com/send?phone=919258797735&text=Hi%20I%20want%20to%20join%20the%20daily%20updates" target="_blank">
+    Join Now on WhatsApp
+  </a>
+</div>
 
-<section>
-  <h2>Get Private Access to Full Reports</h2>
-  <p>
-    Want more in-depth trends and exclusive updates? Join our private info channel to get extended insights.
-  </p>
-  <a class="btn" href="https://forms.gle/YOUR_GOOGLE_FORM_LINK" target="_blank">Join Now</a>
-</section>
+<h2>About This Platform</h2>
+<p>
+  This platform shares data analysis, pattern insights, and educational tracking of daily numbers. We do not promote or encourage financial decisions or risky behavior. Everything shared is purely for learning and observation purposes.
+</p>
 
-  </main>  <footer>
-    <p>Disclaimer: This site does not promote or encourage any form of betting or gambling. All content is for educational and informational purposes only.</p>
-    <p>&copy; 2025 Insight786.in</p>
+  </div>  <footer>
+    <p>Disclaimer: This site is for informational and educational purposes only. We do not promote betting or gambling of any kind.</p>
+    <p>&copy; 2025 Insight786</p>
   </footer>
 </body>
 </html>
