--- a/index.html
+++ b/index.html
@@ -2,110 +2,146 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Get daily updated number insights and educational patterns. Safe for Meta Ads.">
-  <title>Insight Chart 786 | Daily Number Results</title>
+  <meta name="description" content="Get trusted number predictions, data insights, and private trends. Updated daily for educational purposes only.">
+  <title>Number Insight 786</title>
   <style>
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #f8f9fa;
-      color: #212121;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #121212;
+      color: #ffffff;
     }
     header {
-      background-color: #1e88e5;
-      color: white;
-      padding: 1rem;
+      background-color: #222;
+      padding: 1.5rem;
       text-align: center;
     }
     header h1 {
       margin: 0;
-      font-size: 24px;
+      font-size: 32px;
+      color: #00ff00;
     }
-    .main {
-      padding: 1rem;
-      max-width: 1000px;
+    header p {
+      color: #cccccc;
+    }
+    .container {
+      max-width: 800px;
       margin: auto;
+      padding: 2rem 1rem;
     }
-    .table-container {
-      overflow-x: auto;
-      margin-top: 1rem;
+    .chat-box {
+      background-color: #1e1e1e;
+      padding: 1rem;
+      border-radius: 8px;
+      max-height: 500px;
+      overflow-y: auto;
+      margin-bottom: 2rem;
+      box-shadow: 0 0 10px #0f0;
     }
-    table {
+    .chat-entry {
+      background: #2c2c2c;
+      padding: 0.75rem 1rem;
+      margin-bottom: 1rem;
+      border-radius: 6px;
+      border-left: 3px solid #00ff00;
+    }
+    .chat-entry strong {
+      color: #00ff00;
+    }
+    .chart-table {
       width: 100%;
       border-collapse: collapse;
-      background-color: white;
+      margin-bottom: 2rem;
+      background: #1b1b1b;
     }
-    th, td {
+    .chart-table th, .chart-table td {
+      border: 1px solid #444;
       padding: 12px;
-      border: 1px solid #ddd;
       text-align: center;
+      color: #ddd;
     }
-    th {
-      background-color: #eeeeee;
+    .chart-table th {
+      background-color: #2c2c2c;
+      color: #00ff00;
     }
     .cta {
-      margin: 2rem 0;
       text-align: center;
+      margin: 2rem 0;
     }
     .cta a {
       background-color: #25D366;
-      color: white;
+      color: #fff;
       text-decoration: none;
       padding: 0.75rem 1.5rem;
-      border-radius: 5px;
+      border-radius: 4px;
       font-size: 18px;
     }
     footer {
-      background-color: #f1f1f1;
-      padding: 1rem;
       text-align: center;
       font-size: 0.85rem;
-      color: #777;
+      color: #999;
+      padding: 2rem 1rem;
+      background: #111;
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>Insight Chart 786</h1>
-    <p>Daily Updated Number Chart | Educational Insights</p>
-  </header>  <div class="main">
-    <h2>Today’s Data Table</h2>
-    <div class="table-container">
-      <table>
-        <thead>
-          <tr>
-            <th>Region</th>
-            <th>Time</th>
-            <th>Result</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr><td>Zone A</td><td>01:00 PM</td><td>76</td></tr>
-          <tr><td>Metro B</td><td>02:00 PM</td><td>52</td></tr>
-          <tr><td>Central City</td><td>03:00 PM</td><td>93</td></tr>
-          <tr><td>Region X</td><td>04:00 PM</td><td>14</td></tr>
-          <tr><td>North Valley</td><td>05:00 PM</td><td>37</td></tr>
-          <tr><td>Coastal Edge</td><td>06:00 PM</td><td>48</td></tr>
-          <tr><td>Capital Ring</td><td>07:00 PM</td><td>62</td></tr>
-          <tr><td>Zone Y</td><td>08:00 PM</td><td>20</td></tr>
-          <tr><td>Metro South</td><td>09:00 PM</td><td>85</td></tr>
-          <tr><td>Zone Z</td><td>10:00 PM</td><td>11</td></tr>
-        </tbody>
-      </table>
-    </div><div class="cta">
-  <a href="https://api.whatsapp.com/send?phone=919258797735&text=Hi%20I%20want%20to%20join%20the%20daily%20updates" target="_blank">
-    Join Now on WhatsApp
+    <h1>Number Insight 786</h1>
+    <p>Private Source Prediction & Chart Analysis (Educational Purpose Only)</p>
+  </header>  <div class="container"><div class="chat-box">
+  <div class="chat-entry">
+    <strong>Bot:</strong> Hamare paas private group ke 100% confirm data insights hain.
+  </div>
+  <div class="chat-entry">
+    <strong>User:</strong> Bhai leak number chahiye 786 ka.
+  </div>
+  <div class="chat-entry">
+    <strong>Bot:</strong> 786 zone ke liye aaj ka safe prediction 94 hai.
+  </div>
+  <div class="chat-entry">
+    <strong>User:</strong> Fixed number kab milta hai?
+  </div>
+  <div class="chat-entry">
+    <strong>Bot:</strong> Daily 2 baar data update hota hai. Join WhatsApp for exclusive access.
+  </div>
+  <div class="chat-entry">
+    <strong>Bot:</strong> Aaj ke liye Capital Ring: 62, Zone A: 76. Educational prediction only.
+  </div>
+</div>
+
+<h2 style="color: #00ff00">Today’s Insight Table</h2>
+<table class="chart-table">
+  <thead>
+    <tr>
+      <th>Region</th>
+      <th>Time</th>
+      <th>Prediction</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr><td>Zone A</td><td>01:00 PM</td><td>76</td></tr>
+    <tr><td>Metro B</td><td>02:00 PM</td><td>52</td></tr>
+    <tr><td>Central City</td><td>03:00 PM</td><td>93</td></tr>
+    <tr><td>Region X</td><td>04:00 PM</td><td>14</td></tr>
+    <tr><td>North Valley</td><td>05:00 PM</td><td>37</td></tr>
+    <tr><td>Coastal Edge</td><td>06:00 PM</td><td>48</td></tr>
+    <tr><td>Capital Ring</td><td>07:00 PM</td><td>62</td></tr>
+    <tr><td>Zone Y</td><td>08:00 PM</td><td>20</td></tr>
+    <tr><td>Metro South</td><td>09:00 PM</td><td>85</td></tr>
+    <tr><td>Zone Z</td><td>10:00 PM</td><td>11</td></tr>
+  </tbody>
+</table>
+
+<div class="cta">
+  <a href="https://api.whatsapp.com/send?phone=919258797735&text=Hi%2C%20I%20want%20access%20to%20daily%20numbers" target="_blank">
+    📲 Join Now on WhatsApp
   </a>
 </div>
 
-<h2>About This Platform</h2>
-<p>
-  This platform shares data analysis, pattern insights, and educational tracking of daily numbers. We do not promote or encourage financial decisions or risky behavior. Everything shared is purely for learning and observation purposes.
-</p>
-
   </div>  <footer>
-    <p>Disclaimer: This site is for informational and educational purposes only. We do not promote betting or gambling of any kind.</p>
-    <p>&copy; 2025 Insight786</p>
+    <p>This platform shares insights and data trends for learning purposes only. We do not promote any financial or betting activity.</p>
+    <p>&copy; 2025 Insight786.in</p>
   </footer>
 </body>
 </html>
