--- a/index.html
+++ b/index.html
@@ -25,28 +25,41 @@
       color: #cccccc;
     }
     .container {
-      max-width: 800px;
+      max-width: 900px;
       margin: auto;
       padding: 2rem 1rem;
     }
     .chat-box {
       background-color: #1e1e1e;
-      padding: 1rem;
-      border-radius: 8px;
-      max-height: 500px;
+      padding: 1.5rem;
+      border-radius: 10px;
+      max-height: 700px;
       overflow-y: auto;
       margin-bottom: 2rem;
-      box-shadow: 0 0 10px #0f0;
+      box-shadow: 0 0 15px #0f0;
     }
     .chat-entry {
       background: #2c2c2c;
-      padding: 0.75rem 1rem;
-      margin-bottom: 1rem;
-      border-radius: 6px;
-      border-left: 3px solid #00ff00;
+      padding: 2rem;
+      margin-bottom: 2rem;
+      border-radius: 10px;
+      border-left: 4px solid #00ff00;
+      font-size: 1.2rem;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
     }
     .chat-entry strong {
       color: #00ff00;
+    }
+    .chat-entry a {
+      align-self: flex-start;
+      background-color: #25D366;
+      color: white;
+      padding: 0.8rem 1.5rem;
+      border-radius: 6px;
+      font-size: 1.1rem;
+      text-decoration: none;
     }
     .chart-table {
       width: 100%;
@@ -72,9 +85,9 @@
       background-color: #25D366;
       color: #fff;
       text-decoration: none;
-      padding: 0.75rem 1.5rem;
-      border-radius: 4px;
-      font-size: 18px;
+      padding: 1rem 2rem;
+      border-radius: 5px;
+      font-size: 20px;
     }
     footer {
       text-align: center;
@@ -91,22 +104,24 @@
     <p>Private Source Prediction & Chart Analysis (Educational Purpose Only)</p>
   </header>  <div class="container"><div class="chat-box">
   <div class="chat-entry">
-    <strong>Bot:</strong> Hamare paas private group ke 100% confirm data insights hain.
+    <div><strong>Bot:</strong> Hamare paas private group ke 100% confirm data insights hain.</div>
+    <a href="https://api.whatsapp.com/send?phone=919258797735&text=Join%20Now%20for%20confirm%20data">Join WhatsApp</a>
   </div>
   <div class="chat-entry">
-    <strong>User:</strong> Bhai leak number chahiye 786 ka.
+    <div><strong>User:</strong> Bhai leak number chahiye 786 ka.</div>
+    <a href="https://api.whatsapp.com/send?phone=919258797735&text=786%20leak%20number%20please">Get Number</a>
   </div>
   <div class="chat-entry">
-    <strong>Bot:</strong> 786 zone ke liye aaj ka safe prediction 94 hai.
+    <div><strong>Bot:</strong> 786 zone ke liye aaj ka safe prediction 94 hai.</div>
+    <a href="https://api.whatsapp.com/send?phone=919258797735&text=Want%2094%20prediction">Confirm on WhatsApp</a>
   </div>
   <div class="chat-entry">
-    <strong>User:</strong> Fixed number kab milta hai?
+    <div><strong>User:</strong> Fixed number kab milta hai?</div>
+    <a href="https://api.whatsapp.com/send?phone=919258797735&text=When%20is%20fixed%20number%20shared">Ask Now</a>
   </div>
   <div class="chat-entry">
-    <strong>Bot:</strong> Daily 2 baar data update hota hai. Join WhatsApp for exclusive access.
-  </div>
-  <div class="chat-entry">
-    <strong>Bot:</strong> Aaj ke liye Capital Ring: 62, Zone A: 76. Educational prediction only.
+    <div><strong>Bot:</strong> Aaj ke liye Capital Ring: 62, Zone A: 76. Educational prediction only.</div>
+    <a href="https://api.whatsapp.com/send?phone=919258797735&text=Get%20today%27s%20full%20list">Get Full List</a>
   </div>
 </div>
 
@@ -135,7 +150,7 @@
 
 <div class="cta">
   <a href="https://api.whatsapp.com/send?phone=919258797735&text=Hi%2C%20I%20want%20access%20to%20daily%20numbers" target="_blank">
-    📲 Join Now on WhatsApp
+    📲 Join Main WhatsApp Group
   </a>
 </div>
 
