--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background-color: #121212;
       color: #ffffff;
+      position: relative;
     }
     header {
       background-color: #222;
@@ -33,10 +34,9 @@
       background-color: #1e1e1e;
       padding: 1.5rem;
       border-radius: 10px;
-      max-height: 700px;
-      overflow-y: auto;
       margin-bottom: 2rem;
       box-shadow: 0 0 15px #0f0;
+      position: relative;
     }
     .chat-entry {
       background: #2c2c2c;
@@ -44,7 +44,7 @@
       margin-bottom: 2rem;
       border-radius: 10px;
       border-left: 4px solid #00ff00;
-      font-size: 1.2rem;
+      font-size: 1.3rem;
       display: flex;
       flex-direction: column;
       gap: 1rem;
@@ -56,7 +56,7 @@
       align-self: flex-start;
       background-color: #25D366;
       color: white;
-      padding: 0.8rem 1.5rem;
+      padding: 1rem 2rem;
       border-radius: 6px;
       font-size: 1.1rem;
       text-decoration: none;
@@ -89,6 +89,16 @@
       border-radius: 5px;
       font-size: 20px;
     }
+    .whatsapp-fixed {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      z-index: 100;
+    }
+    .whatsapp-fixed img {
+      width: 65px;
+      height: 65px;
+    }
     footer {
       text-align: center;
       font-size: 0.85rem;
@@ -104,24 +114,28 @@
     <p>Private Source Prediction & Chart Analysis (Educational Purpose Only)</p>
   </header>  <div class="container"><div class="chat-box">
   <div class="chat-entry">
-    <div><strong>Bot:</strong> Hamare paas private group ke 100% confirm data insights hain.</div>
-    <a href="https://api.whatsapp.com/send?phone=919258797735&text=Join%20Now%20for%20confirm%20data">Join WhatsApp</a>
+    <div><strong>Bot:</strong> Hamare paas private group ke 100% confirm data insights hain. Leak number chahiye? Bilkul free milega!</div>
+    <a href="https://api.whatsapp.com/send?phone=919258797735&text=Mujhe%20leak%20number%20chahiye%20free">Message Now</a>
   </div>
   <div class="chat-entry">
-    <div><strong>User:</strong> Bhai leak number chahiye 786 ka.</div>
-    <a href="https://api.whatsapp.com/send?phone=919258797735&text=786%20leak%20number%20please">Get Number</a>
+    <div><strong>User:</strong> Bhai mujhe leak number chahiye abhi ke abhi.</div>
+    <a href="https://api.whatsapp.com/send?phone=919258797735&text=Send%20leak%20number%20please">Get Number</a>
   </div>
   <div class="chat-entry">
-    <div><strong>Bot:</strong> 786 zone ke liye aaj ka safe prediction 94 hai.</div>
-    <a href="https://api.whatsapp.com/send?phone=919258797735&text=Want%2094%20prediction">Confirm on WhatsApp</a>
+    <div><strong>Bot:</strong> Aaj ka special leak: Capital Ring ke liye 62. Educational use only.</div>
+    <a href="https://api.whatsapp.com/send?phone=919258797735&text=Confirm%20leak%20number%2062">Confirm Now</a>
   </div>
   <div class="chat-entry">
-    <div><strong>User:</strong> Fixed number kab milta hai?</div>
-    <a href="https://api.whatsapp.com/send?phone=919258797735&text=When%20is%20fixed%20number%20shared">Ask Now</a>
+    <div><strong>User:</strong> Fix number ka update chahiye.</div>
+    <a href="https://api.whatsapp.com/send?phone=919258797735&text=Fix%20number%20update">Fix Number</a>
   </div>
   <div class="chat-entry">
-    <div><strong>Bot:</strong> Aaj ke liye Capital Ring: 62, Zone A: 76. Educational prediction only.</div>
-    <a href="https://api.whatsapp.com/send?phone=919258797735&text=Get%20today%27s%20full%20list">Get Full List</a>
+    <div><strong>Bot:</strong> Free daily update group ke liye WhatsApp karein. No charge!</div>
+    <a href="https://api.whatsapp.com/send?phone=919258797735&text=Join%20free%20update%20group">Join Group</a>
+  </div>
+  <div class="chat-entry">
+    <div><strong>Bot:</strong> Sirf limited logon ke liye exclusive list share ki ja rahi hai.</div>
+    <a href="https://api.whatsapp.com/send?phone=919258797735&text=Send%20exclusive%20list">Get List</a>
   </div>
 </div>
 
@@ -154,6 +168,10 @@
   </a>
 </div>
 
+  </div>  <div class="whatsapp-fixed">
+    <a href="https://api.whatsapp.com/send?phone=919258797735&text=Hello%20Team" target="_blank">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
+    </a>
   </div>  <footer>
     <p>This platform shares insights and data trends for learning purposes only. We do not promote any financial or betting activity.</p>
     <p>&copy; 2025 Insight786.in</p>
