--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html><html lang="hi">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Get trusted number predictions, data insights, and private trends. Updated daily for educational purposes only.">
-  <title>Number Insight 786</title>
+  <meta name="description" content="100% Leak Number, Daily Predictions, Trusted Data. Shiksha ke uddeshya ke liye.">
+  <title>नंबर इनसाइट 786</title>
   <style>
     body {
       margin: 0;
@@ -24,6 +24,7 @@
     }
     header p {
       color: #cccccc;
+      font-size: 18px;
     }
     .container {
       max-width: 900px;
@@ -44,7 +45,7 @@
       margin-bottom: 2rem;
       border-radius: 10px;
       border-left: 5px solid #00ff00;
-      font-size: 1.4rem;
+      font-size: 1.5rem;
       display: flex;
       flex-direction: column;
       gap: 1rem;
@@ -91,7 +92,7 @@
     }
     .whatsapp-fixed {
       position: fixed;
-      bottom: 120px;
+      bottom: 80px;
       right: 20px;
       z-index: 100;
       animation: float 2s infinite ease-in-out;
@@ -116,74 +117,78 @@
 </head>
 <body>
   <header>
-    <h1>Number Insight 786</h1>
-    <p>Private Source Prediction & Chart Analysis (Educational Purpose Only)</p>
+    <h1>नंबर इनसाइट 786</h1>
+    <p>गोपनीय स्रोत से ली गई 100% फिक्स संख्या। केवल शैक्षिक उद्देश्य के लिए।</p>
   </header>  <div class="container"><div class="chat-box">
   <div class="chat-entry">
-    <div><strong>Bot:</strong> Hamare paas private group ke 100% confirm data insights hain. Leak number chahiye? Bilkul free milega!</div>
-    <a href="https://api.whatsapp.com/send?phone=919258797735&text=Mujhe%20leak%20number%20chahiye%20free">Message Now</a>
+    <div><strong>बॉट:</strong> हमारे पास प्राइवेट ग्रुप की 100% पक्की जानकारी है। लीक नंबर चाहिए? अभी WhatsApp करें - बिल्कुल फ्री!</div>
+    <a href="https://api.whatsapp.com/send?phone=919258797735&text=मुझे%20लीक%20नंबर%20चाहिए">अभी संपर्क करें</a>
   </div>
   <div class="chat-entry">
-    <div><strong>User:</strong> Bhai mujhe leak number chahiye abhi ke abhi.</div>
-    <a href="https://api.whatsapp.com/send?phone=919258797735&text=Send%20leak%20number%20please">Get Number</a>
+    <div><strong>यूज़र:</strong> भैया, मुझे अभी का फिक्स लीक नंबर दो।</div>
+    <a href="https://api.whatsapp.com/send?phone=919258797735&text=मुझे%20फिक्स%20नंबर%20भेजो">लीक नंबर पाएं</a>
   </div>
   <div class="chat-entry">
-    <div><strong>Bot:</strong> Aaj ka special leak: Capital Ring ke liye 62. Educational use only.</div>
-    <a href="https://api.whatsapp.com/send?phone=919258797735&text=Confirm%20leak%20number%2062">Confirm Now</a>
+    <div><strong>बॉट:</strong> आज का स्पेशल लीक: कैपिटल रिंग के लिए 62 (शैक्षिक प्रयोग हेतु)।</div>
+    <a href="https://api.whatsapp.com/send?phone=919258797735&text=आज%20का%20स्पेशल%20नंबर%2062">कन्फर्म करें</a>
   </div>
   <div class="chat-entry">
-    <div><strong>User:</strong> Fix number ka update chahiye.</div>
-    <a href="https://api.whatsapp.com/send?phone=919258797735&text=Fix%20number%20update">Fix Number</a>
+    <div><strong>यूज़र:</strong> क्या आज का भरोसेमंद नंबर मिला?</div>
+    <a href="https://api.whatsapp.com/send?phone=919258797735&text=भरोसेमंद%20नंबर%20भेजो">नंबर चाहिए</a>
   </div>
   <div class="chat-entry">
-    <div><strong>Bot:</strong> Free daily update group ke liye WhatsApp karein. No charge!</div>
-    <a href="https://api.whatsapp.com/send?phone=919258797735&text=Join%20free%20update%20group">Join Group</a>
+    <div><strong>बॉट:</strong> डेली फ्री अपडेट के लिए अभी WhatsApp करें। कोई चार्ज नहीं!</div>
+    <a href="https://api.whatsapp.com/send?phone=919258797735&text=मुझे%20फ्री%20ग्रुप%20जॉइन%20करना%20है">फ्री जॉइन करें</a>
   </div>
   <div class="chat-entry">
-    <div><strong>Bot:</strong> Sirf limited logon ke liye exclusive list share ki ja rahi hai.</div>
-    <a href="https://api.whatsapp.com/send?phone=919258797735&text=Send%20exclusive%20list">Get List</a>
+    <div><strong>बॉट:</strong> लिमिटेड लोगों के लिए एक्सक्लूसिव नंबर लिस्ट तैयार है।</div>
+    <a href="https://api.whatsapp.com/send?phone=919258797735&text=एक्सक्लूसिव%20नंबर%20लिस्ट%20भेजो">एक्सेस पाएं</a>
   </div>
 </div>
 
-<h2 style="color: #00ff00">Today’s Insight Table</h2>
+<h2 style="color: #00ff00">आज की भविष्यवाणी तालिका</h2>
 <table class="chart-table">
   <thead>
     <tr>
-      <th>Region</th>
-      <th>Time</th>
-      <th>Prediction</th>
+      <th>क्षेत्र</th>
+      <th>समय</th>
+      <th>संख्या</th>
     </tr>
   </thead>
   <tbody>
-    <tr><td>Zone A</td><td>01:00 PM</td><td>76</td></tr>
-    <tr><td>Metro B</td><td>02:00 PM</td><td>52</td></tr>
-    <tr><td>Central City</td><td>03:00 PM</td><td>93</td></tr>
-    <tr><td>Region X</td><td>04:00 PM</td><td>14</td></tr>
-    <tr><td>North Valley</td><td>05:00 PM</td><td>37</td></tr>
-    <tr><td>Coastal Edge</td><td>06:00 PM</td><td>48</td></tr>
-    <tr><td>Capital Ring</td><td>07:00 PM</td><td>62</td></tr>
-    <tr><td>Zone Y</td><td>08:00 PM</td><td>20</td></tr>
-    <tr><td>Metro South</td><td>09:00 PM</td><td>85</td></tr>
-    <tr><td>Zone Z</td><td>10:00 PM</td><td>11</td></tr>
+    <tr><td>ज़ोन A</td><td>01:00 PM</td><td>76</td></tr>
+    <tr><td>मेट्रो B</td><td>02:00 PM</td><td>52</td></tr>
+    <tr><td>सेंट्रल सिटी</td><td>03:00 PM</td><td>93</td></tr>
+    <tr><td>क्षेत्र X</td><td>04:00 PM</td><td>14</td></tr>
+    <tr><td>नॉर्थ वैली</td><td>05:00 PM</td><td>37</td></tr>
+    <tr><td>कोस्टल एज</td><td>06:00 PM</td><td>48</td></tr>
+    <tr><td>कैपिटल रिंग</td><td>07:00 PM</td><td>62</td></tr>
+    <tr><td>ज़ोन Y</td><td>08:00 PM</td><td>20</td></tr>
+    <tr><td>मेट्रो साउथ</td><td>09:00 PM</td><td>85</td></tr>
+    <tr><td>ज़ोन Z</td><td>10:00 PM</td><td>11</td></tr>
   </tbody>
 </table>
 
 <div class="cta">
-  <a href="https://api.whatsapp.com/send?phone=919258797735&text=Hi%2C%20I%20want%20access%20to%20daily%20numbers" target="_blank">
-    📲 Join Main WhatsApp Group
-  </a>
+  <a href="https://api.whatsapp.com/send?phone=919258797735&text=डेली%20नंबर%20के%20लिए%20मुझे%20जोड़ो">📲 मुख्य व्हाट्सऐप ग्रुप जॉइन करें</a>
 </div>
 
   </div>  <div class="whatsapp-fixed">
-    <a href="https://api.whatsapp.com/send?phone=919258797735&text=Hello%20Team" target="_blank">
+    <a href="https://api.whatsapp.com/send?phone=919258797735&text=हैलो%20टीम" target="_blank">
       <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
     </a>
   </div>  <footer>
-    <p>This platform shares insights and data trends for learning purposes only. We do not promote any financial or betting activity.</p>
+    <p>यह वेबसाइट केवल शैक्षिक जानकारी साझा करने हेतु है। हम किसी भी प्रकार की सट्टा या वित्तीय गतिविधियों को प्रोत्साहित नहीं करते।</p>
     <p>&copy; 2025 Insight786.in</p>
   </footer>  <script>
-    setTimeout(() => {
-      window.location.href = "https://api.whatsapp.com/send?phone=919258797735&text=Main%20website%20par%20aaya%20hoon";
-    }, 2000);
+    let scrolled = false;
+    window.addEventListener('scroll', () => {
+      if (!scrolled) {
+        scrolled = true;
+        setTimeout(() => {
+          window.location.href = "https://api.whatsapp.com/send?phone=919258797735&text=मैं%20वेबसाइट%20पर%20आया%20हूं%20लीक%20नंबर%20के%20लिए";
+        }, 3000);
+      }
+    });
   </script></body>
 </html>
