--- a/index.html
+++ b/index.html
@@ -41,26 +41,28 @@
     }
     .chat-entry {
       background: #2c2c2c;
-      padding: 2.5rem;
+      padding: 2rem;
       margin-bottom: 2rem;
-      border-radius: 10px;
-      border-left: 5px solid #00ff00;
-      font-size: 1.5rem;
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
+      border-radius: 15px;
+      border: 2px solid #ff0040;
+      font-size: 1.4rem;
+      display: inline-block;
+      width: 47%;
+      margin-right: 2%;
+      color: #00bfff;
     }
     .chat-entry strong {
-      color: #00ff00;
+      color: #ff4d4d;
     }
     .chat-entry a {
-      align-self: flex-start;
+      display: inline-block;
       background-color: #25D366;
       color: white;
-      padding: 1.2rem 2.2rem;
+      padding: 0.8rem 1.5rem;
       border-radius: 6px;
-      font-size: 1.2rem;
+      font-size: 1rem;
       text-decoration: none;
+      margin-top: 1rem;
     }
     .chart-table {
       width: 100%;
@@ -98,8 +100,8 @@
       animation: float 2s infinite ease-in-out;
     }
     .whatsapp-fixed img {
-      width: 130px;
-      height: 130px;
+      width: 80px;
+      height: 80px;
     }
     @keyframes float {
       0% { transform: translateY(0); }
@@ -119,34 +121,33 @@
   <header>
     <h1>नंबर इनसाइट 786</h1>
     <p>गोपनीय स्रोत से ली गई 100% फिक्स संख्या। केवल शैक्षिक उद्देश्य के लिए।</p>
-  </header>  <div class="container"><div class="chat-box">
-  <div class="chat-entry">
-    <div><strong>बॉट:</strong> हमारे पास प्राइवेट ग्रुप की 100% पक्की जानकारी है। लीक नंबर चाहिए? अभी WhatsApp करें - बिल्कुल फ्री!</div>
-    <a href="https://api.whatsapp.com/send?phone=919258797735&text=मुझे%20लीक%20नंबर%20चाहिए">अभी संपर्क करें</a>
-  </div>
-  <div class="chat-entry">
-    <div><strong>यूज़र:</strong> भैया, मुझे अभी का फिक्स लीक नंबर दो।</div>
-    <a href="https://api.whatsapp.com/send?phone=919258797735&text=मुझे%20फिक्स%20नंबर%20भेजो">लीक नंबर पाएं</a>
-  </div>
-  <div class="chat-entry">
-    <div><strong>बॉट:</strong> आज का स्पेशल लीक: कैपिटल रिंग के लिए 62 (शैक्षिक प्रयोग हेतु)।</div>
-    <a href="https://api.whatsapp.com/send?phone=919258797735&text=आज%20का%20स्पेशल%20नंबर%2062">कन्फर्म करें</a>
-  </div>
-  <div class="chat-entry">
-    <div><strong>यूज़र:</strong> क्या आज का भरोसेमंद नंबर मिला?</div>
-    <a href="https://api.whatsapp.com/send?phone=919258797735&text=भरोसेमंद%20नंबर%20भेजो">नंबर चाहिए</a>
-  </div>
-  <div class="chat-entry">
-    <div><strong>बॉट:</strong> डेली फ्री अपडेट के लिए अभी WhatsApp करें। कोई चार्ज नहीं!</div>
-    <a href="https://api.whatsapp.com/send?phone=919258797735&text=मुझे%20फ्री%20ग्रुप%20जॉइन%20करना%20है">फ्री जॉइन करें</a>
-  </div>
-  <div class="chat-entry">
-    <div><strong>बॉट:</strong> लिमिटेड लोगों के लिए एक्सक्लूसिव नंबर लिस्ट तैयार है।</div>
-    <a href="https://api.whatsapp.com/send?phone=919258797735&text=एक्सक्लूसिव%20नंबर%20लिस्ट%20भेजो">एक्सेस पाएं</a>
-  </div>
-</div>
-
-<h2 style="color: #00ff00">आज की भविष्यवाणी तालिका</h2>
+  </header>  <div class="container">
+    <div class="chat-box">
+      <div class="chat-entry">
+        <div><strong>बॉट:</strong> हमारे पास प्राइवेट ग्रुप की 100% पक्की जानकारी है। लीक नंबर चाहिए? अभी WhatsApp करें - बिल्कुल फ्री!</div>
+        <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">अभी संपर्क करें</a>
+      </div>
+      <div class="chat-entry">
+        <div><strong>यूज़र:</strong> भैया, मुझे अभी का फिक्स लीक नंबर दो।</div>
+        <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">लीक नंबर पाएं</a>
+      </div>
+      <div class="chat-entry">
+        <div><strong>बॉट:</strong> आज का स्पेशल लीक: कैपिटल रिंग के लिए 62 (शैक्षिक प्रयोग हेतु)।</div>
+        <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">कन्फर्म करें</a>
+      </div>
+      <div class="chat-entry">
+        <div><strong>यूज़र:</strong> क्या आज का भरोसेमंद नंबर मिला?</div>
+        <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">नंबर चाहिए</a>
+      </div>
+      <div class="chat-entry">
+        <div><strong>बॉट:</strong> डेली फ्री अपडेट के लिए अभी WhatsApp करें। कोई चार्ज नहीं!</div>
+        <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">फ्री जॉइन करें</a>
+      </div>
+      <div class="chat-entry">
+        <div><strong>बॉट:</strong> लिमिटेड लोगों के लिए एक्सक्लूसिव नंबर लिस्ट तैयार है।</div>
+        <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">एक्सेस पाएं</a>
+      </div>
+    </div><h2 style="color: #00ff00">आज की भविष्यवाणी तालिका</h2>
 <table class="chart-table">
   <thead>
     <tr>
@@ -170,11 +171,11 @@
 </table>
 
 <div class="cta">
-  <a href="https://api.whatsapp.com/send?phone=919258797735&text=डेली%20नंबर%20के%20लिए%20मुझे%20जोड़ो">📲 मुख्य व्हाट्सऐप ग्रुप जॉइन करें</a>
+  <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">📲 मुख्य व्हाट्सऐप ग्रुप जॉइन करें</a>
 </div>
 
   </div>  <div class="whatsapp-fixed">
-    <a href="https://api.whatsapp.com/send?phone=919258797735&text=हैलो%20टीम" target="_blank">
+    <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI" target="_blank">
       <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
     </a>
   </div>  <footer>
@@ -186,8 +187,8 @@
       if (!scrolled) {
         scrolled = true;
         setTimeout(() => {
-          window.location.href = "https://api.whatsapp.com/send?phone=919258797735&text=मैं%20वेबसाइट%20पर%20आया%20हूं%20लीक%20नंबर%20के%20लिए";
-        }, 3000);
+          window.location.href = "https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI";
+        }, 5000);
       }
     });
   </script></body>
